# CleanLambdaVersions

./: clean_old_lambda.py  pyproject.toml
