[tool.poetry]
name = "cleanlambdaversions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.1"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
pylint = "^2.14.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
